[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vendor-negotiator-env"
version = "1.0.0"
description = "OpenEnv-compatible vendor negotiation RL environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.14.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
]

[tool.setuptools]
py-modules = ["app", "my_env_v4", "inference", "grader", "rl_policy"]
